# apes-shepherd

./: LICENSE  README.md  pyproject.toml  shepherd.py
shepherd/: __init__.py  executor.py  main.py
shepherd/lib/: auxiliary.py  build_steering.py  clone_and_build_function.py  create_tag.py  mail_function.py  md5.py  performance.py  recursive.py  shepherd_job.py  validate_functions.py  validation.py
